--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,7 +1,15 @@
-body {
-	background-color: black;
+h1 {
+  	text-align: center;
 }
 
-h1,p {
-		color: white;
+body {
+  text-align: center;
+  background-image: url(sunsetsilhouette.jpeg);
+  background-size: cover;
+  color: #fff;
+  font-family: Helvetica;
 }
+hr {
+  width: 200px;
+  p {
+    font-size: 22px;
