--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 main{
 	color: #FFFFFF;
-	background-image: url(../images/sunsetsilhouette.jpeg);
+	background-image: images/sunsetsilhouette.jpeg
 	height: 100vh;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -13,7 +13,7 @@ main{
 	align-items: center;
 }	
 .hero-image{
-	background-image: url('images/sunsetsilhouette.jpeg')
+	background-image: images/sunsetsilhouette.jpeg
 	background-color: #FFFFFF;
 	height: 500px;
 	background-position: center;
@@ -22,10 +22,10 @@ main{
 }
 
 h1{
+	font-family: bold
 	font-size: 30px;
 }
-h2{
-	font-size: 24px;
+
 }
 #slogan{
 	font-style: italic;
