--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,39 +1,22 @@
-body{
-	font-family: Helvetica;
-	text-align: center;
-}
-main{
-	color: #FFFFFF;
-	background-image: images/sunsetsilhouette.jpeg
-	height: 100vh;
-	background-repeat: no-repeat;
-	background-size: cover;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}	
-.hero-image{
-	background-image: images/sunsetsilhouette.jpeg
-	background-color: #FFFFFF;
-	height: 500px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+h1 {
+  	text-align: center;
+  	font-family: bold;
 }
 
-h1{
-	font-family: bold
-	font-size: 30px;
+h2 {
+	text-align: center;
+	font-family: italic;
 }
 
+body {
+  text-align: center;
+  background: url("http://i.imgur.com/q0FaaAk.jpg");
+  background-size: cover;
+  color: #fff;
+  font-family: Helvetica;
 }
-#slogan{
-	font-style: italic;
+hr {
+  width: 200px;
+  p {
+    font-size: 22px;
 }
-.button{
-	background-color: #FFFFFF;
-	text-align: center;
-	padding: 15px 25px;
-	display: block;
-	width: 50%;
-	margin: 5px;
