--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -10,7 +10,7 @@ h2 {
 
 body {
   text-align: center;
-  background: url("http://i.imgur.com/q0FaaAk.jpg");
+  background: url("https://images.unsplash.com/photo-1567813923985-2071e2a0a0ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
   background-size: cover;
   color: #fff;
   font-family: Helvetica;
