--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,3 +1,12 @@
+body {
+  text-align: center;
+  background-image: url("https://images.unsplash.com/photo-1567813923985-2071e2a0a0ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  font-family: Helvetica;
+}
+
 h1 {
   	text-align: center;
   	font-family: bold;
@@ -8,12 +17,6 @@ h2 {
 	font-family: italic;
 }
 
-body {
-  text-align: center;
-  background-size: cover;
-  color: #fff;
-  font-family: Helvetica;
-}
 hr {
   width: 200px;
   p {
