--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,11 +1,11 @@
 h1 {
   	text-align: center;
-  	font-family: bold;
+  	font-weight: bold;
 }
 
 h2 {
 	text-align: center;
-	font-family: italic;
+	font-style: : italic;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
 }
 hr {
   width: 200px;
+ } 
   p {
     font-size: 22px;
 }
