--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -8,6 +8,27 @@ h2 {
 	font-style: : italic;
 }
 
+#register button {background-color:#ffe8a8;
+                   color:black;
+                   font-size: 20px;
+                   padding: 8px 20px;
+                   margin: 50px;
+                   float: center;
+                   position: relative;
+           border-radius:2px;
+           cursor:pointer;}
+.btn-group button{ background-color:transparent;
+                   color:#de4028;
+                   font-size:1.2em;
+                   font-weight: 700px;
+                   border:0;
+                   padding: 8px 20px;
+                   margin: 0px 80px;
+                   float: center;
+                   position: relative;
+                   cursor:pointer;
+            }
+
 body {
   text-align: center;
   background-image: url("https://images.unsplash.com/photo-1567813923985-2071e2a0a0ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
