--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -27,7 +27,10 @@ h2 {
                    float: center;
                    position: relative;
                    cursor:pointer;
-            }
+.btn-group button:hover{ color:#ffe8a8; }
+hr{width:80px;
+   margin-bottom:0px;}
+p { font-size: 0.8em; }            
 
 body {
   text-align: center;
