--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -24,7 +24,7 @@ h3 {
            border-radius:2px;
            cursor:pointer;}
 .btn-group button{ background-color:transparent;
-                   color:#de4028;
+                   color:#000;
                    font-size:1.2em;
                    font-weight: 700px;
                    border:0;
