--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -17,6 +17,7 @@ h3 {
 #register button {background-color:#000;
                    color:black;
                    font-size: 20px;
+                    font-variant-caps: all-small-caps;
                    padding: 8px 20px;
                    margin: 50px;
                    float: center;
