--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,18 +1,18 @@
 h1 {
-  	font-family: 'Anton', sans-serif;
+  	font-family: 'Anton', serif;
     text-align: center;
   	font-weight: bold;
     font-variant-caps: all-small-caps;
 }
 
 h2 {
-	font-family: 'Anton', sans-serif;
+	font-family: 'Anton', serif;
   text-align: center;
 	font-style: : italic;
   font-variant-caps: all-small-caps;
 }
 h3 {
-  font-family: 'Anton', sans-serif;
+  font-family: 'Anton', serif;
   text-align: center;
   font-variant-caps: all-small-caps;
 }
