--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,6 +1,6 @@
 h1 {
   	font-size: 40px; 
-    font-family: 'Anton', sans-serif;
+    font-family: 'Dancing Script', cursive;
     text-align: center;
   	font-weight: bold;
     font-variant-caps: all-small-caps;
