--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -22,7 +22,7 @@ h3 {
 }
 
 #register button {background-color:#000;
-                   font-family: 'Dancing Script', cursive;
+                   font-family: 'cursive;
                    color:black;
                    font-size: 20px;
                    font-variant-caps: all-small-caps;
@@ -47,7 +47,7 @@ h3 {
 .btn-group button:hover{ color:#e3bc1b; }
 hr{width:80px;
    margin-bottom:0px;}
-p { font-size: 0.8em; }            
+p { font-size: 0.9em; }            
 
 body {
   text-align: center;
