--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -20,6 +20,11 @@ h3 {
   text-align: center;
 }
 
+#wrapper {
+	width: 1000px;
+	margin: 0 auto;
+}
+
 #register button {background-color:#000;
                    color:black;
                    font-family: 'Dancing Script', cursive;
