--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -13,7 +13,7 @@ h2 {
 	font-style: : italic;
   font-variant-caps: all-small-caps;
 }
-footer {
+h3 {
   font-family: 'Dancing Script', cursive;
   margin: 2em;
   font-size: 20px;
