--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -20,6 +20,10 @@ h3 {
   text-align: center;
 }
 
+footer {
+	font-size: 12px;
+	font-weight: lighter;
+}
 
 #register button {background-color:#000;
                    color:black;
