--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -23,6 +23,7 @@ h3 {
 footer {
 	font-size: 12px;
 	font-weight: lighter;
+	font-family: 'Dancing Script', cursive;
 }
 
 #register button {background-color:#000;
