--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -6,6 +6,10 @@ h1 {
     font-variant-caps: all-small-caps;
 }
 
+#header {
+	float: left;
+}
+
 h2 {
 	font-style: 26px;
   font-family: 'Dancing Script', cursive;
